# Pong

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
include/: checkScore.h  constants.h  debug.h  drawGameOver.h  drawPaddles.h  drawScore.h  moveBall.h  movePaddle.h  resetBall.h  toggleDebug.h
src/: checkScore.c  constants.c  debug.c  drawGameOver.c  drawPaddles.c  drawScore.c  main.c  moveBall.c  movePaddle.c  resetBall.c  toggleDebug.c
